# liem-wallpaper

./: Cargo.toml  README.md  SHADERS.md  setup.iss
.github/workflows/: ci.yml
crates/lw-cli/: Cargo.toml
crates/lw-cli/src/: main.rs
crates/lw-core/: Cargo.toml
crates/lw-core/src/: config.rs  error.rs  ipc.rs  lib.rs  logging.rs  traits.rs
crates/lw-core/tests/: config_tests.rs
crates/lw-gui/: Cargo.toml
crates/lw-gui/src/: main.rs  updater.rs
crates/lw-gui/ui/: app.slint
crates/lw-plugin/: Cargo.toml
crates/lw-renderer/: Cargo.toml
crates/lw-renderer/src/: composition.rs  d3d11.rs  image_loader.rs  lib.rs  window.rs
crates/lw-service/: Cargo.toml
crates/lw-service/src/: fullscreen.rs  ipc.rs  lib.rs  main.rs  scheduler.rs  startup.rs  tray.rs
crates/lw-service/tests/: ipc_tests.rs  scheduler_tests.rs  startup_tests.rs
crates/lw-setup/: Cargo.toml
crates/lw-setup/src/: main.rs
crates/lw-transition/: Cargo.toml
crates/lw-transition/src/: easing.rs  lib.rs  shader.rs
crates/lw-transition/tests/: easing_tests.rs
crates/lw-wallpaper/: Cargo.toml
crates/lw-wallpaper/src/: lib.rs  monitor.rs
crates/lw-wallpaper/tests/: monitor_tests.rs
shaders/: clock-reverse.hlsl  clock.hlsl  fade.hlsl  glitch.hlsl  pixelate.hlsl  radial-in.hlsl  radial-out.hlsl  slide-down.hlsl  slide-left.hlsl  slide-right.hlsl  slide-up.hlsl  slide.hlsl  wipe.hlsl  zoom-in.hlsl  zoom-out.hlsl
