[workspace]
resolver = "2"
members = [
    "crates/lw-core",
    "crates/lw-renderer",
    "crates/lw-wallpaper",
    "crates/lw-transition",
    "crates/lw-service",
    "crates/lw-cli",
    "crates/lw-gui",
    "crates/lw-plugin",
    "crates/lw-setup",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Liem Wallpaper Contributors"]

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.8" }
slint = { version = "1.3" }
clap = { version = "4.4", features = ["derive"] }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

# Win32 APIs
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_LibraryLoader",
] }

# Internal workspace crates
lw-core = { path = "crates/lw-core" }
lw-renderer = { path = "crates/lw-renderer" }
lw-wallpaper = { path = "crates/lw-wallpaper" }
lw-transition = { path = "crates/lw-transition" }
lw-service = { path = "crates/lw-service" }
lw = { path = "crates/lw-cli" }
lw-gui = { path = "crates/lw-gui" }
lw-plugin = { path = "crates/lw-plugin" }
lw-setup = { path = "crates/lw-setup" }

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
