[package]
name = "lw-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
slint = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lw-core = { path = "../lw-core" }
ureq = { version = "2.9", features = ["json"] }

[build-dependencies]
slint-build = "1.3"

[lints]
workspace = true
