[package]
name = "lw-setup"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
windows = { workspace = true, features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[lints]
workspace = true
